# RipBot

./: CMakeLists.txt  main.cpp  mod.json
.github/workflows/: build.yml
src/macro/: MacroManager.cpp  MacroManager.hpp
src/ui/: MainUi.cpp  MainUi.hpp
